--- a/chatbot/src/styles/styles.css
+++ b/chatbot/src/styles/styles.css
@@ -207,3 +207,23 @@ html, body {
 .send-button:hover {
     background-color: #0056b3;
 }
+
+.button {
+    display: inline-block;
+    background-color: blue;
+    color: white;
+    padding: 0.5rem 1rem;
+    width: 150px; /* or whatever fixed width you want */
+    text-align: center;
+    border-radius: 10px;
+    font-size: 0.875rem;
+    text-decoration: none;
+    font-weight: 500;
+    transition: background-color 0.2s ease;
+}
+
+
+
+.button:hover {
+    background-color: mediumblue; /* different blue when user almost click*/
+}
